--- a/Packages.props
+++ b/Packages.props
@@ -9,9 +9,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Nuke.Common" Version="0.21.2" />
-    <PackageReference Update="Rocket.Surgery.Nuke.DotNetCore" Version="0.3.8" />
+    <PackageReference Update="Rocket.Surgery.Nuke.DotNetCore" Version="0.4.1" />
     <PackageReference Update="GitVersion.CommandLine.DotNetCore" Version="5.0.1" />
-    <PackageReference Update="ReportGenerator" Version="4.2.15" />
+    <PackageReference Update="ReportGenerator" Version="4.2.19" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
@@ -23,32 +23,32 @@
     <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)'!='netstandard2.0' and '$(TargetFramework)'!='netcoreapp2.1'">
-    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0-preview8.19405.4" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview8.19405.4" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0-preview8.19405.4" />
-    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0-preview8.19405.4" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0-preview8.19405.4" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-preview8.19405.4" />
-    <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.6.0-preview8.19405.3" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0-preview9.19423.4" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview9.19423.4" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0-preview9.19423.4" />
+    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0-preview9.19423.4" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0-preview9.19423.4" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-preview9.19423.4" />
+    <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.6.0-preview9.19421.4" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Autofac" Version="4.9.4" />
-    <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
-    <PackageReference Update="Rocket.Surgery.Conventions" Version="7.0.5" />
-    <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="7.0.5" />
-    <PackageReference Update="Rocket.Surgery.Hosting" Version="7.0.5" />
-    <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="7.0.5" />
+    <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="5.0.0-rc1" />
+    <PackageReference Update="Rocket.Surgery.Conventions" Version="7.1.0" />
+    <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="7.1.0" />
+    <PackageReference Update="Rocket.Surgery.Hosting" Version="7.1.0" />
+    <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="7.1.0" />
     <PackageReference Update="Scrutor" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="Rocket.Surgery.Extensions.Testing" Version="1.2.1" />
+    <PackageReference Update="Rocket.Surgery.Extensions.Testing" Version="1.2.3" />
     <PackageReference Update="Autofac.Extras.FakeItEasy" Version="5.0.1" />
-    <PackageReference Update="Bogus" Version="28.0.2" />
+    <PackageReference Update="Bogus" Version="28.2.1" />
     <PackageReference Update="coverlet.collector" Version="1.0.1" />
     <PackageReference Update="coverlet.msbuild" Version="2.6.3" />
-    <PackageReference Update="FakeItEasy" Version="5.1.1" />
-    <PackageReference Update="FakeItEasy.Analyzer.CSharp" Version="5.1.1" />
-    <PackageReference Update="FluentAssertions" Version="5.8.0" />
+    <PackageReference Update="FakeItEasy" Version="5.2.0" />
+    <PackageReference Update="FakeItEasy.Analyzer.CSharp" Version="5.2.0" />
+    <PackageReference Update="FluentAssertions" Version="5.9.0" />
     <PackageReference Update="FluentAssertions.Analyzers" Version="0.11.4" />
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Update="xunit" Version="2.4.1" />
