--- a/Packages.props
+++ b/Packages.props
@@ -17,21 +17,21 @@
     <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)'!='netstandard2.0' and '$(TargetFramework)'!='netcoreapp2.1'">
-    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0-preview9.19423.4" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview9.19423.4" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0-preview9.19423.4" />
-    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0-preview9.19423.4" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0-preview9.19423.4" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-preview9.19423.4" />
-    <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.6.0-preview9.19421.4" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0-rc1.19456.10" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.0.0-rc1.19456.10" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0-rc1.19456.10" />
+    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0-rc1.19456.10" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0-rc1.19456.10" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-rc1.19456.10" />
+    <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.6.0-rc1.19456.4" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Autofac" Version="4.9.4" />
-    <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="5.0.0-rc1" />
-    <PackageReference Update="Rocket.Surgery.Conventions" Version="7.1.0" />
-    <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="7.1.0" />
-    <PackageReference Update="Rocket.Surgery.Hosting" Version="7.1.0" />
-    <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="7.1.0" />
+    <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="5.0.0-rc2" />
+    <PackageReference Update="Rocket.Surgery.Conventions" Version="7.2.1" />
+    <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="7.2.1" />
+    <PackageReference Update="Rocket.Surgery.Hosting" Version="7.2.1" />
+    <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="7.2.1" />
     <PackageReference Update="Scrutor" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
