--- a/Packages.props
+++ b/Packages.props
@@ -17,29 +17,29 @@
     <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)'!='netstandard2.0' and '$(TargetFramework)'!='netcoreapp2.1'">
-    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0-rc1.19456.10" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.0.0-rc1.19456.10" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0-rc1.19456.10" />
-    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0-rc1.19456.10" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0-rc1.19456.10" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.0.0-rc1.19456.10" />
-    <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.6.0-rc1.19456.4" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.0.0" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
+    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.0.0" />
+    <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Autofac" Version="4.9.4" />
-    <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="5.0.0-rc2" />
-    <PackageReference Update="Rocket.Surgery.Conventions" Version="8.0.0" />
-    <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="8.0.0" />
-    <PackageReference Update="Rocket.Surgery.Hosting" Version="8.0.0" />
-    <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Update="Autofac.Extensions.DependencyInjection" Version="5.0.0" />
+    <PackageReference Update="Rocket.Surgery.Conventions" Version="8.0.1" />
+    <PackageReference Update="Rocket.Surgery.Conventions.Abstractions" Version="8.0.1" />
+    <PackageReference Update="Rocket.Surgery.Hosting" Version="8.0.1" />
+    <PackageReference Update="Rocket.Surgery.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     <PackageReference Update="Scrutor" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Rocket.Surgery.Extensions.Testing.FakeItEasy" Version="2.0.0" />
     <PackageReference Update="Autofac.Extras.FakeItEasy" Version="5.0.1" />
-    <PackageReference Update="Bogus" Version="28.2.1" />
-    <PackageReference Update="coverlet.collector" Version="1.0.1" />
-    <PackageReference Update="coverlet.msbuild" Version="2.6.3" />
+    <PackageReference Update="Bogus" Version="28.3.1" />
+    <PackageReference Update="coverlet.collector" Version="1.1.0" />
+    <PackageReference Update="coverlet.msbuild" Version="2.7.0" />
     <PackageReference Update="FakeItEasy" Version="5.2.0" />
     <PackageReference Update="FakeItEasy.Analyzer.CSharp" Version="5.2.0" />
     <PackageReference Update="FluentAssertions" Version="5.9.0" />
