--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,12 +7,13 @@ trigger:
   paths:
     exclude:
     - '**/*.md'
-    - .appveyor.yml
-    - .codecov.yml
+    - '**/*.yml'
+    - '**/*.yaml'
+    - .vscode/*
     - .git*
     - .editorconfig
     - .nuke
-    - GitReleaseManager.yaml
+    - LICENSE
 
 pr:
   autoCancel: true
@@ -53,4 +54,4 @@ jobs:
       DotNetSdk:
         - "2.2.x"
         - "3.0.x"
-      NuGetVersion: "5.2.0"
+      NuGetVersion: "5.3.0"
