--- a/src/Autofac.Abstractions/Rocket.Surgery.Extensions.Autofac.Abstractions.csproj
+++ b/src/Autofac.Abstractions/Rocket.Surgery.Extensions.Autofac.Abstractions.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+        <PackageDescription>Provides Autofac support for a Rocket Surgery Application</PackageDescription>
+        <PackageTags>$(PackageTags);autofac</PackageTags>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Autofac" />
