--- a/src/Hosting.Autofac/Rocket.Surgery.Hosting.Autofac.csproj
+++ b/src/Hosting.Autofac/Rocket.Surgery.Hosting.Autofac.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+        <PackageDescription>Provides Autofac support for a Rocket Surgery Application, converts the default service provider into an autofac based one</PackageDescription>
+        <PackageTags>$(PackageTags);autofac</PackageTags>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\Autofac\Rocket.Surgery.Extensions.Autofac.csproj" />
