--- a/Packages.props
+++ b/Packages.props
@@ -17,24 +17,16 @@
     <PackageReference Update="JetBrains.ReSharper.CommandLineTools" Version="2019.3.1" />
     <PackageReference Update="Nuke.Common" Version="0.23.4" />
     <PackageReference Update="ReportGenerator" Version="4.4.0" />
-    <PackageReference Update="Rocket.Surgery.Nuke.DotNetCore" Version="0.10.1" />
+    <PackageReference Update="Rocket.Surgery.Nuke.DotNetCore" Version="0.11.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
-    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="2.1.1" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="2.1.1" />
     <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="4.7.0" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'!='netstandard2.0' and '$(TargetFramework)'!='netcoreapp2.1'">
-    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.0.0" />
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.0.0" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.0" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
+    <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="Autofac" Version="4.9.4" />
@@ -47,8 +39,8 @@
   <ItemGroup>
     <PackageReference Update="Rocket.Surgery.Extensions.Testing.FakeItEasy" Version="3.3.0" />
     <PackageReference Update="Bogus" Version="28.4.4" />
-    <PackageReference Update="coverlet.collector" Version="1.1.0" />
-    <PackageReference Update="coverlet.msbuild" Version="2.7.0" />
+    <PackageReference Update="coverlet.collector" Version="1.2.0" />
+    <PackageReference Update="coverlet.msbuild" Version="2.8.0" />
     <PackageReference Update="FakeItEasy" Version="5.5.0" />
     <PackageReference Update="FakeItEasy.Analyzer.CSharp" Version="5.5.0" />
     <PackageReference Update="FluentAssertions" Version="5.10.0" />
@@ -58,4 +50,5 @@
     <PackageReference Update="xunit.analyzers" Version="0.10.0" />
     <PackageReference Update="xunit.runner.visualstudio" Version="2.4.1" />
   </ItemGroup>
+  <Import Project="$(MSBuildThisFileDirectory)/$(LegacySupportPackagesProps)" Condition="Exists('$(MSBuildThisFileDirectory)/$(LegacySupportPackagesProps)')" />
 </Project>
